WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284472
[Skia] Ignore warnings in some Skia headers to fix non-unified clang build
https://bugs.webkit.org/show_bug.cgi?id=284472
Summary
[Skia] Ignore warnings in some Skia headers to fix non-unified clang build
Claudio Saavedra
Reported
2024-12-11 10:06:36 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2024-12-11 10:07:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37784
EWS
Comment 2
2024-12-11 11:56:18 PST
Committed
287685@main
(e9f0264df880): <
https://commits.webkit.org/287685@main
> Reviewed commits have been landed. Closing PR #37784 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug