[Skia] Ignore warnings in some Skia headers to fix non-unified clang build https://bugs.webkit.org/show_bug.cgi?id=284472

Reviewed by Michael Catanzaro.

These headers pull Skia headers that do unsafe buffer usages, in unified builds
they are somehow already ignored, but in non-unified builds they are not,
so ignore them explicitly.

* Source/WebCore/platform/graphics/filters/skia/FEComponentTransferSkiaApplier.cpp:
* Source/WebCore/platform/graphics/filters/skia/FEDropShadowSkiaApplier.cpp:
* Source/WebCore/platform/graphics/filters/skia/FEGaussianBlurSkiaApplier.cpp:
* Source/WebCore/platform/graphics/filters/skia/SourceGraphicSkiaApplier.cpp:
* Source/WebCore/platform/graphics/skia/FloatRectSkia.cpp:
* Source/WebCore/platform/graphics/skia/IntRectSkia.cpp:
* Source/WebCore/platform/graphics/skia/NativeImageSkia.cpp:
* Source/WebCore/platform/graphics/skia/ShareableBitmapSkia.cpp:
* Source/WebCore/platform/graphics/skia/TransformationMatrixSkia.cpp:

Canonical link: https://commits.webkit.org/287685@main